--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&family=Raleway&family=Roboto&display=swap');
 @import url(./header.css);
 @import url(./footer.css);
+
 html{
     scroll-behavior: smooth;
 }
@@ -19,6 +21,25 @@ main{
     height: fit-content;
     background-color: azure;
 }
+
+.btn {
+    background-color: #f2f2f2;
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin: 0.5rem;
+}
+
+.back-btn{
+    margin: 1rem;
+    border: 1px solid;
+    border-radius: 5px;
+    padding: 0.5rem;
+    background-color: #fff;
+    color: #000;
+  }
+
 .strand-container
 {
     position: relative;
