--- a/public/css/login.css
+++ b/public/css/login.css
@@ -12,10 +12,10 @@
   margin: 1rem 0rem 0rem 0rem;
 }
 
-main{
+main {
   position: relative;
-  background-color: rgb(0,0,0, .5);
-  height: 100vh;
+  background-color: rgb(0,0,0, .5) !important;
+  height: 100vh !important;
   display: flex;
   justify-content: center;
   align-items: center;
