--- a/public/css/thesisForm.css
+++ b/public/css/thesisForm.css
@@ -8,7 +8,29 @@
 body {
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
-  color: #333;
+  background-color: azure;
+}
+
+
+.success {
+  color: green;
+}
+
+.error {
+  color: red;
+  font-weight: bold;
+  margin-bottom: 15px;
+}
+
+.back-btn {
+  background-color: #00adb5;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  padding: 12px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  text-decoration: none;
 }
 
 .container {
@@ -17,7 +39,7 @@ body {
   padding: 50px;
   border-radius: 5px;
   background-color: #ccc;
-
+  padding: 10px;
   border: 1px solid;
 }
 
@@ -30,6 +52,10 @@ body {
   font-size: 16px;
   cursor: pointer;
   text-decoration: none;
+}
+
+main{
+  padding: 20px;
 }
 
 .title {
@@ -75,6 +101,8 @@ label {
 }
 
 input[type="text"],
+input[type="email"],
+input[type="password"],
 select,
 textarea,
 input[type="number"],
@@ -127,3 +155,4 @@ input[type="submit"] {
 input[type="submit"]:hover {
   background-color: #028086;
 }
+
