--- a/public/css/thesisTable.css
+++ b/public/css/thesisTable.css
@@ -1,8 +1,7 @@
 /* body */
 body {
   font-family: 'Roboto', sans-serif;
-  background-color: #f7f7f7;
-  color: #333;
+  background-color: azure;
   max-width: auto;
   max-height: auto;
 }
@@ -22,6 +21,20 @@ button{
   border-radius: 4px;
   cursor: pointer;
   margin: 0.5rem;
+}
+
+.filter-form {
+  margin: 20px 0;
+}
+
+.upload-thesis-btn {
+  background-color: #00adb5;
+  color: #fff;
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+
 }
 
 /* main content */
