--- a/public/css/usersTable.css
+++ b/public/css/usersTable.css
@@ -45,6 +45,7 @@ td {
 th {
   background-color: rgb(73, 73, 73);
   font-weight: bold;
+  text-align: center;
 }
 
 tr:nth-child(even) {
@@ -53,12 +54,28 @@ tr:nth-child(even) {
 
 button {
   display: block;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.btn {
+  display: block;
   background-color: #00adb5;
   color: white;
   padding: 10px 20px;
   border: none;
   border-radius: 5px;
   cursor: pointer;
+}
+
+.flex {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 16px;
 }
 
 button:hover {
