--- a/public/css/thesisView.css
+++ b/public/css/thesisView.css
@@ -4,16 +4,27 @@ main {
   background: url(/images/dark.jpg) no-repeat center center/cover;
 }
 
-#pdf-container {
-  min-width: 900px;
-  
-}
-
 .container {
   display: center;
   height: 100vh;
+}
+
+#pdf-container {
+  height: 600px; /* Set the desired height */
+  overflow: auto; /* Add scrollbars if necessary */
+}
+
+canvas {
+  display: block;
+  margin: 0 auto;
+}
+
+.pdf-page-container {
+  margin-bottom: 10px;
 
 }
+
+
 
 .content-header{
   display: center;
